--- a/home/templates/base/footer.html
+++ b/home/templates/base/footer.html
@@ -6,7 +6,7 @@
             <span>with <i style="font-size: 14px;" class="fas fa-heart"></i> Ankit Kumar Verma</span>
         </div>
     </div>
-    <a class="bug-report" href="https://github.com/akverma26/Deduction" target="_blank">
+    <a class="bug-report" href="https://github.com/akverma26/Deductions" target="_blank">
         <span>Report a Bug?</span>
         <span>submit on <i class="fab fa-github-alt"></i> GitHub!</span>
     </a>
