--- a/home/templates/base/index.html
+++ b/home/templates/base/index.html
@@ -45,7 +45,7 @@
                     <img src="{% static 'base/images/logo.png' %}">
                 </div>
                 <div class="title-text">
-                    Deduction
+                    Deductions
                 </div>
             </a>
             <div class="top-bar-page-title">
