--- a/deducted/static/deducted/css.css
+++ b/deducted/static/deducted/css.css
@@ -1,62 +1,77 @@
-.main-body {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+.top-bar-div .logo-div .title-text {
+    font-size: 30px;
 }
 
-.deducted-page {
-    margin: auto;
-    width: 100%;
-    text-align: center;
-}
-
-.deducted-page .info-div {
-    width: 100%;
-    padding-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-}
-
-.deducted-page .info-div > * {
-    max-width: 900px;
-    margin: auto;
-}
-
-.deducted-page .info-div .title {
-    margin: auto;
-    padding: 20px;
-}
-
-.deducted-page .info-div .title-text {
-    padding-left: 20px;
-    font-size: 40px;
-    text-align: center;
-    font-family: GoogleSans;
-    padding: 20px;
-}
-
-.deducted-page .info-div .description {
-    padding: 20px;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    font-family: GoogleSans;
-    border-radius: 10px;
-}
-
-.deducted-page .info-div .info-1 span {
-    padding: 2px 8px;
-    margin-left: 5px;
+.top-bar-div .tb-author {
     font-size: 14px;
 }
 
-.deducted-page .info-div .info-1 a {
+.top-bar-div .social-pf-div a {
+    font-size: 18px;
+}
+
+.top-bar-div .top-bar-page-info {
+    margin: auto;
+    padding: 20px;
+    width: 100%;
+}
+
+.top-bar-div .deducted-page-info {
+    margin: auto;
+}
+
+.deducted-page-info .info-div {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    max-width: 1200px;
+}
+
+.deducted-page-info .info-div > * {
+    margin: auto;
+    color: rgb(50, 50, 50);
+}
+
+.deducted-page-info .info-div .title-text {
+    font-size: 50px;
+    text-align: center;
+    font-family: GoogleSansB;
+    margin-bottom: 20px;
+}
+
+.deducted-page-info .info-div .description {
+    font-family: GoogleSans;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.deducted-page-info .info-div .info-1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.deducted-page-info .info-div .info-1 span {
+    padding: 2px 8px;
+    margin-left: 5px;
+    font-size: 16px;
+}
+
+.deducted-page-info .info-div .info-1 a {
     text-decoration: none;
     color: rgb(50, 50, 80);
 }
 
-.deducted-page .info-div .info-2 span {
+.deducted-page-info .info-div .info-2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    line-height: 30px;
+}
+
+.deducted-page-info .info-div .info-2 span {
     border-radius: 10px;
     padding: 2px 8px;
     font-size: 14px;
@@ -65,14 +80,17 @@
     border-bottom: 3px solid rgb(50, 50, 80);
 }
 
-.deducted-page .info-div .info-2 i {
+.deducted-page-info .info-div .info-2 i {
     transform: translate(0, 5px);
 }
 
-.deducted-page .info-div i {
+.deducted-page-info .info-div i {
     margin-right: 5px;
 }
 
 .deducted-page .deduction-content {
-    text-align: left;
+    font-family: GoogleSans;
+    letter-spacing: 0.5px;
+    line-height: 50px;
+    font-size: 18px;
 }
