--- a/home/templates/base/footer.html
+++ b/home/templates/base/footer.html
@@ -1,13 +1,24 @@
 <div class="footer-div">
-    <div class="msg-div">
-        <div class="msg-text">
-            <span>Thank you for being here!</span>
-            <br>
-            <span>with <i style="font-size: 14px;" class="fas fa-heart"></i> Ankit Kumar Verma</span>
+    <div class="footer-content">
+        <div class="msg-div">
+            <div class="msg-text">
+                <span>with <i style="font-size: 14px;" class="fas fa-heart"></i> Ankit Kumar Verma</span>
+            </div>
         </div>
+        <a class="bug-report hvr-underline-from-center" href="https://github.com/akverma26/Deductions" target="_blank">
+            <span>Report a Bug?</span>
+            <span>submit on <i class="fab fa-github-alt"></i> GitHub!</span>
+        </a>
     </div>
-    <a class="bug-report" href="https://github.com/akverma26/Deductions" target="_blank">
-        <span>Report a Bug?</span>
-        <span>submit on <i class="fab fa-github-alt"></i> GitHub!</span>
-    </a>
+    <div class="credits-div">
+
+            <div class="credits">
+                <a href="https://prismjs.com/" target="_blank">PrismJs.com</a>
+                <a href="https://animate.style/" target="_blank">Animate.style</a>
+                <a href="https://ianlunn.github.io/Hover/" target="_blank">Hover.css</a>
+                <a href="https://fontawesome.com" target="_blank">FontAwesome.com</a>
+                <a href="https://typora.io/" target="_blank">Typora.io</a>
+            </div>
+        <div class="title"> <<< Credits</div>
+    </div>
 </div>
