--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 <div class="deductions-div">
 
 {% for deduction in deductions %}
-<a class="deduction" href="/deducted/{{deduction.title}}-{{deduction.id}}">
+<a class="deduction hvr-overline-from-center" href="/deducted/{{deduction.title}}-{{deduction.id}}">
     <div class="title">
         <div class="bg"></div>
         <div class="title-text">
