--- a/deducted/templates/deducted/index.html
+++ b/deducted/templates/deducted/index.html
@@ -23,39 +23,45 @@
 {% endblock %}
 
 {% block top-bar-page-title %}
-{{ deduction.title }}
+    {{ deduction.title }}
+{% endblock %}
+
+{% block top-bar-page-info %}
+
+<div class="deducted-page-info">
+    <div class="info-div">
+        <div class="title">
+            <div class="title-text">
+                {{ deduction.title }}
+            </div>
+        </div>
+        <div class="info-1">
+            <span> <i class="fas fa-pencil-alt"></i> <a href="{{ deduction.author_profile_link }}">{{ deduction.author }}</a> </span>
+            <span> <i class="fas fa-calendar-plus"></i> {{ deduction.date_uploaded|date }}</span>
+            <span> <i class="fas fa-calendar-check"></i> {{ deduction.date_last_modified|date }}</span>
+        </div>
+        <div class="description">
+            {{ deduction.description }}
+        </div>
+        <div class="info-2">
+            <i class="fas fa-tags"></i>
+        
+            {% with tags=deduction.tags|split:" " %}
+                {% for tag in tags %}
+                    <span>{{ tag }}</span>
+                {% endfor %}
+            {% endwith %}
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 
 {% block main-body %}
 <div class="deducted-page">
 
-        <div class="info-div">
-            <div class="title">
-                <div class="title-text">
-                    {{ deduction.title }}
-                </div>
-            </div>
-            <div class="info-1">
-                <span> <i class="fas fa-pencil-alt"></i> <a href="{{ deduction.author_profile_link }}">{{ deduction.author }}</a> </span>
-                <span> <i class="fas fa-calendar-plus"></i> {{ deduction.date_uploaded|date }}</span>
-                <span> <i class="fas fa-calendar-check"></i> {{ deduction.date_last_modified|date }}</span>
-            </div>
-            <div class="description">
-                {{ deduction.description }}
-            </div>
-            <div class="info-2">
-                <i class="fas fa-tags"></i>
-            
-                {% with tags=deduction.tags|split:" " %}
-                    {% for tag in tags %}
-                        <span>{{ tag }}</span>
-                    {% endfor %}
-                {% endwith %}
-            </div>
-        </div>
 
-
-        <div class="deduction-content" style="line-height: 30px; font-weight: normal; font-family: GoogleSans;">
+        <div class="deduction-content">
                 {{ html|safe }}
         </div>
 
