--- a/home/static/base/footer.css
+++ b/home/static/base/footer.css
@@ -1,44 +1,104 @@
 .footer-div {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
-    padding: 50px 20px;
+    padding: 100px 10px;
+    padding-top: 80px;
     display: flex;
     flex-direction: column;
     font-family: GoogleSans;
-    background: white;
     line-height: 30px;
+    z-index: 5;
+    position: relative;
 }
 
-.footer-div * {
+.footer-div .footer-content {
+    margin: auto;
+}
+
+.footer-div .footer-content * {
     margin: auto;
     text-align: center;
-    font-size: 18px;
     color: rgb(50, 50, 80);
 }
 
-.footer-div .msg-div .msg-text span:first-child {
-    font-size: 25px;
-    font-family: GoogleSansB;
-}
-
-.footer-div .msg-div .msg-text span:last-child {
+.footer-div .msg-div .msg-text span {
     font-size: 14px;
     margin-left: 5px;
 }
 
 .footer-div .bug-report  {
-    margin-top: 5px;
-    padding: 0px 10px;
-    border-radius: 3px;
-    box-shadow: 0 0 4px rgba(50, 50, 80, 0.3);
-    border-bottom: 3px solid rgb(50, 50, 80);
+    box-shadow: 0 0 4px rgba(50, 50, 80, 0.1);
     text-decoration: none;
     display: block;
+    padding: 0 10px;
+    font-size: 14px;
 }
 
 .footer-div .bug-report span:last-child {
     font-size: 14px;
     margin-left: 5px;
+}
+
+.footer-div .credits-div {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    box-shadow: 0 0 1px rgba(0,0,0,0.3);
+    display: flex;
+    font-family: Roboto;
+    color: rgb(50, 50, 80);
+    font-size: 14px;
+}
+
+.footer-div .credits-div .title {
+    padding: 0px 10px;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.3);
+}
+
+.footer-div .credits-div .credits {
+    padding: 0px 10px;
+    flex: 1;
+    overflow-x: auto;
+    display: flex;
+}
+
+.footer-div .credits-div .credits a {
+    text-decoration: none;
+    margin: auto;
+    padding: 0 10px;
+}
+
+.footer-div .credits-div .credits a:hover {
+    letter-spacing: 2px;
+}
+
+/* Underline From Center */
+.hvr-underline-from-center {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+}
+.hvr-underline-from-center:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 51%;
+    right: 51%;
+    bottom: 0;
+    background: rgb(50, 50, 80);
+    height: 4px;
+    -webkit-transition-property: left, right;
+    transition-property: left, right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+    left: 0;
+    right: 0;
 }
