--- a/home/templates/base/index.html
+++ b/home/templates/base/index.html
@@ -21,10 +21,12 @@
         <meta name="theme-color" content="rgb(255, 255, 255)" />
 
         <link rel="shortcut icon" type="image/png" href="{% static 'base/images/favicon.ico' %}"/>
-        
+
         <script src="{% static 'base/jquery.js' %}"></script>
         <script src="{% static 'base/CDNjquery.js' %}"></script>
-        <script src="https://kit.fontawesome.com/3e6d2d4d16.js" crossorigin="anonymous"></script>     
+        <script src="https://kit.fontawesome.com/3e6d2d4d16.js" crossorigin="anonymous"></script>  
+        
+        <script src="{% static 'base/js.js' %}"></script>
 
         <link rel="stylesheet" type="text/css" href="{% static 'base/css.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'base/top-bar.css' %}">
@@ -39,30 +41,50 @@
 
     <body>
 
-        <div class="top-bar-div">
-            <a class="logo-div" href="/">
-                <div class="logo">
-                    <img src="{% static 'base/images/logo.png' %}">
-                </div>
-                <div class="title-text">
-                    Deductions
-                </div>
-            </a>
-            <div class="top-bar-page-title">
+        <div class="fixed-top-bar">
+            <div class="logo">
+                <a class="hvr-wobble-horizontal" href="/">{ Deductions }</a>
+            </div>
+            <div class="title">
                 {% block top-bar-page-title %}
                 {% endblock %}
             </div>
-            <div class="social-pf-div">
-                <a href="https://akverma26.github.io/" target="_blank" title="My Portfolio">
-                    <i class='fas fa-globe'></i>
-                </a>
-                <a href="https://github.com/akverma26/" target="_blank" title="My GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/akverma26/" target="_blank" title="My Linkedin">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
+        </div>
+
+        <div class="top-bar-div">
+            <div>
+
+                    <div class="top-bar-info">
+        
+                        <a class="logo-div" href="/">
+                            <div class="title-text hvr-wobble-horizontal">
+                                { Deductions }
+                            </div>
+                        </a>
+                        <div class="tb-author">
+                            Blog by Ankit Kumar Verma
+                        </div>
+                        <div class="social-pf-div">
+                            <a href="https://akverma26.github.io/" target="_blank" title="My Portfolio" class="hvr-float-shadow">
+                                <i class='fas fa-globe'></i>
+                            </a>
+                            <a href="https://github.com/akverma26/" target="_blank" title="My GitHub" class="hvr-float-shadow">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/akverma26/" target="_blank" title="My Linkedin" class="hvr-float-shadow">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </div>
+        
+                    </div>
+        
+                    <div class="top-bar-page-info">
+                        {% block top-bar-page-info %}
+                        {% endblock %}
+                    </div>
+
             </div>
+
         </div>
 
         <div class="main-body">
