--- a/deducted/templates/deducted/index.html
+++ b/deducted/templates/deducted/index.html
@@ -58,7 +58,7 @@
 {% endblock %}
 
 {% block main-body %}
-<div class="deducted-page">
+<div class="deducted-page" style="margin: auto; background: white; border-radius: 5px; border: 1px solid rgba(0,0,0,0.1); max-width: 1200px;">
 
 
         <div class="deduction-content">
