--- a/site_admin/templates/add-deduction/index.html
+++ b/site_admin/templates/add-deduction/index.html
@@ -12,6 +12,8 @@
 <div class="input-details">
     <input type="text" id="manifest_url" placeholder="URL of Manifest">
     <input type="button" value="Fetch Info" id="fetch-info">
+    <input type="button" value="Refresh Data Files" id="refresh-data">
+    <input type="button" value="Are you sure?" id="sure">
 </div>
 
 {% endblock %}
