--- a/site_admin/static/add-deduction/css.css
+++ b/site_admin/static/add-deduction/css.css
@@ -59,3 +59,16 @@ input:first-child {
     border: 2px solid rgb(150, 0, 0);
     display: none;
 }
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    border: 1px solid rgb(150, 150, 150);
+    padding: 5px 10px;
+}
+
+td div {
+    margin: 5px 0;
+}
